add JS for hide error message on click of text box

--- a/lists/static/tests/tests.html
+++ b/lists/static/tests/tests.html
@@ -31,6 +31,12 @@
 	  window.Superlists.initialize();
 	  assert.equal($('.has-error').is(':visible'), true);
       });
+
+      QUnit.test("errors should be hidden on click", function (assert) {
+	  window.Superlists.initialize();
+	  $('input[name="text"]').trigger('click');
+	  assert.equal($('.has-error').is(':visible'), false);
+      });
       
     </script>
 
